--- a/todaslojas/lojas/ebc/estilo1/style.css
+++ b/todaslojas/lojas/ebc/estilo1/style.css
@@ -61,4 +61,20 @@
             border-radius: 20px; /* Raio de borda menor para telas pequenas */
         }
     }
+    .imagem-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 60vh; /* Ajuste a altura conforme necessário */
+        overflow: hidden;
+        margin-top: -20px; /* Ajuste a distância negativa conforme necessário */
+    }
+
+    .imagem-container img {
+        max-width: 100%;
+        max-height: 100%;
+        margin: auto;
+        display: block;
+    }
+</style>
 </style>
